apps/order-service/base/networkpolicies/allow-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-prometheus

spec:
  podSelector:
    matchLabels:
      app: order-service

  policyTypes:
    - Ingress

  ingress:
    - from:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring

          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus

      ports:
        - protocol: TCP
          port: 8083
